adding some basic docs

--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
 <div class="content-middle">
     <h1>Minecraft Dailies</h1>
     <a href="/quests">Quests<a>
+    <a href="/docs">API<a>
     <a href="http://www.github.com/pandapaul/minecraft-dailies-server">Source</a>
 </div>
 
