--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Minecraft Dailies</title>
 <link rel="stylesheet" type="text/css" href="main.css"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
 <body>
