rewording and fixing html derps

--- a/static/questList/index.html
+++ b/static/questList/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="content-top">
-    <h1>Quest List</h1>
+    <h1>All Quests</h1>
 
     <div class="quest-list-explanation">
         List of all quests that form the pool of possible dailies.
