--- a/static/index.html
+++ b/static/index.html
@@ -10,9 +10,9 @@
 
 <div class="content-middle">
     <h1>Minecraft Dailies</h1>
-    <a href="/quests">Dailies<a>
-    <a href="/questList">Quest List</a>
-    <a href="/docs">API<a>
+    <a href="/quests">Dailies</a>
+    <a href="/questList">All Quests</a>
+    <a href="/docs">API</a>
     <a href="http://www.github.com/pandapaul/minecraft-dailies-server">Source</a>
 </div>
 
