--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
 <title>Minecraft Dailies</title>
 <link rel="stylesheet" type="text/css" href="main.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
+<script src="analytics.js" type="text/javascript"></script>
 </head>
 
 <body>
