--- a/static/userProfile/index.html
+++ b/static/userProfile/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="../main.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 <script src="index.js" type="text/javascript"></script>
 <script src="../analytics.js" type="text/javascript"></script>
 </head>
@@ -14,7 +15,8 @@
 <div class="content-top">
     <div class="profile-title"></div>
 
-    <div class="quest-inventory">
+    <h1 class="prepend-username">Quests</h1>
+    <div class="quest-list">
         <div class="quest template">
             <div class="quest-type"></div>
             <div class="quest-text-wrapper">
@@ -25,7 +27,8 @@
         </div>
     </div>
 
-    <div class="activities-list">
+    <h1 class="prepend-username">Activity</h1>
+    <div class="activity-list">
         <div class="activity template">
             <span class="activity-action"></span>
             <span class="activity-quest-name"></span>
