adding progress bars to user profile quests

--- a/static/userProfile/index.html
+++ b/static/userProfile/index.html
@@ -22,7 +22,10 @@
             <div class="quest-text-wrapper">
                 <div class="quest-name"></div>
                 <div class="quest-description"></div>
+            </div>
+            <div class="quest-progress">
                 <div class="quest-status"></div>
+                <div class="quest-progress-bar"></div>
             </div>
         </div>
     </div>
