--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
         <input type="text" placeholder="Find a player"/>
     </div>
 
-    <div class="quest-list" style="display:none">
+    <div class="quest-list front-page">
         <h3>Today's Dailies</h3>
         <div class="quest template">
             <div class="quest-type"></div>
