--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="quest-list front-page">
-        <h3>Today's Dailies</h3>
+        <h3>Today's Quests</h3>
         <div class="quest template">
             <div class="quest-type"></div>
             <div class="quest-text-wrapper">
