adding a download link to the curseforge for bailey's dailies and scooting the main page content up a little bit

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
     <div class="nav">
         <span class="title">Minecraft Dailies</span>
         <span class="links">
+            <a href="https://minecraft.curseforge.com/projects/baileys-dailies">Download</a>
             <a href="/questList">Quests</a>
             <a href="/docs">API</a>
             <a href="http://www.github.com/pandapaul/minecraft-dailies-server">Source</a>
