adding meta stuffs

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,8 @@
 <title>Minecraft Dailies</title>
 <link rel="stylesheet" type="text/css" href="main.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
+<meta name="description" content="Daily quests for hunting, gathering, and exploring the wonderful world of Minecraft.">
+<meta name="keywords" content="minecraft,daily,quest,quests,mod,forge,rewards,bailey">
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="index.js" type="text/javascript"></script>
 <script src="analytics.js" type="text/javascript"></script>
