adding a simple stats display

--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,10 @@
     <div class="user-search">
         <input type="text" placeholder="Find a player"/>
     </div>
+    
+    <div class="stats">
+        <span class="quest-completions-count"></span> Quests completed by <span class="users-count"></span> Players.
+    </div>
 
     <div class="quest-list front-page">
         <h3>Today's Quests</h3>
