add individual stats tracking to user profiles to show how many quests individual folks have completed #5

--- a/static/userProfile/index.html
+++ b/static/userProfile/index.html
@@ -14,7 +14,10 @@
 
 <div class="content-top user-profile">
 
-    <h1 class="profile-name"></h1>
+    <div class="header">
+        <span class="profile-name"></span>
+        <span class="stats"></span>
+    </div>
 
     <div class="activity-container">
         <img class="character-render"/>
