show a count of all the quests on the quest list

--- a/static/questList/index.html
+++ b/static/questList/index.html
@@ -15,7 +15,7 @@
     <h1>All Quests</h1>
 
     <div class="quest-list-explanation">
-        List of all quests that form the pool of possible dailies.
+        List of all <span class="total-quest-count"></span> quests that form the pool of possible dailies.
     </div>
 
     <div class="quest-list">
