--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
 <meta name="description" content="Daily quests for hunting, gathering, and exploring the wonderful world of Minecraft.">
 <meta name="keywords" content="minecraft,daily,quest,quests,mod,forge,rewards,bailey">
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="index.js" type="text/javascript"></script>
 <script src="analytics.js" type="text/javascript"></script>
 </head>
