starting to add in activity ui for the real time log

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
     <div class="user-search">
         <input type="text" placeholder="Find a player"/>
     </div>
-    
+
     <div class="stats">
         <span class="quest-completions-count"></span> Quests completed by <span class="users-count"></span> Players.
     </div>
@@ -42,6 +42,16 @@
                 <div class="quest-name"></div>
                 <div class="quest-description"></div>
             </div>
+        </div>
+    </div>
+
+    <div class="activity-list">
+        <h3>Activity</h3>
+        <div class="activity template">
+            <span class="activity-avatar"></span>
+            <span class="activity-action"></span>
+            <span class="activity-quest-name"></span>
+            <span class="activity-date"></span>
         </div>
     </div>
 
