Link to user profile via activity stream avatar & username.  resolves #12

--- a/static/index.html
+++ b/static/index.html
@@ -50,8 +50,10 @@
         <h3>Activity</h3>    
         <div class="activity-list">
             <div class="activity template">
-                <img class="activity-avatar"></img>
-                <span class="activity-username"></span>
+                <a class="user-profile-link">
+                    <img class="activity-avatar"></img>
+                    <span class="activity-username"></span>
+                </a>
                 <span class="activity-action"></span>
                 <span class="activity-quest-name"></span>
                 <span class="activity-date"></span>
