--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="index.js" type="text/javascript"></script>
-<script src="analytics.js" type="text/javascript"></script>
+<script src="analytics.min.js" type="text/javascript"></script>
 </head>
 
 <body>
