--- a/static/questList/index.html
+++ b/static/questList/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="index.js" type="text/javascript"></script>
-<script src="../analytics.js" type="text/javascript"></script>
+<script src="../analytics.min.js" type="text/javascript"></script>
 </head>
 
 <body>
