--- a/static/userProfile/index.html
+++ b/static/userProfile/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 <script src="index.js" type="text/javascript"></script>
-<script src="../analytics.js" type="text/javascript"></script>
+<script src="../analytics.min.js" type="text/javascript"></script>
 </head>
 
 <body>
