show quest rewards with item icons on landing page

--- a/static/index.html
+++ b/static/index.html
@@ -43,6 +43,11 @@
                 <div class="quest-name"></div>
                 <div class="quest-description"></div>
             </div>
+            <div class="quest-reward">
+              Rewards
+              <span class="quest-reward-quantity"></span>
+              <img class="quest-reward-icon"></img>
+            </div>
         </div>
     </div>
 
