--- a/static/questList/index.html
+++ b/static/questList/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="../main.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9, user-scalable=no">
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="index.js" type="text/javascript"></script>
+<script src="bundle.js" type="text/javascript"></script>
 <script src="../analytics.min.js" type="text/javascript"></script>
 </head>
 
@@ -24,6 +24,11 @@
             <div class="quest-text-wrapper">
                 <div class="quest-name"></div>
                 <div class="quest-description"></div>
+            </div>
+            <div class="quest-reward">
+              Rewards
+              <span class="quest-reward-quantity"></span>
+              <img class="quest-reward-icon"></img>
             </div>
         </div>
     </div>
